tests/errors/examples/primitive_called_as_function.vg
<!-- Expected Error: Type structure mismatch - primitive used as function
     Context: Attempting to call a string value as if it were a function
     
     The 'name' variable is a string, but we're trying to call it with arguments.
-->
<view name="Test">
  <div>
    <div>Hello: {name}</div>
    <div>{name("arg")}</div>
  </div>
</view>
